--- a/html5up-overflow/login.html
+++ b/html5up-overflow/login.html
@@ -16,7 +16,7 @@
 	<body>
 
 		<!-- Header -->
-			<section id="header">
+			<!--section id="header">
 				<header>
 					<h1>My SiS Pal</h1>
 					<p>Bringing SiS to the student</p>
@@ -27,7 +27,7 @@
 			</section>
 
 		<!-- Banner -->
-			<section id="banner">
+			<!--section id="banner">
 				<header>
 					<h2>This is My Sis Pal</h2>
 				</header>
@@ -39,7 +39,7 @@
 			</section>
 
 		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
+			<!--article id="first" class="container box style1 right">
 				<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -51,23 +51,23 @@
 			</article>
 
 		<!-- Feature 2 -->
-			<article class="container box style1 left">
+			<!--article class="container box style1 left">
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Information Sans Confusion<br />
+						<h2>Time for Advising?<br />
 						</h2>
 					</header>
-					<p>Dealing with a clumsy interface will is now a thing of the past. My SiS Pal will remind you of your advisor, </p>
+					<p>My SiS Pal will remind you of your advisor, </p>
 				</div>
 			</article>
 
 		<!-- Portfolio -->
-			<article class="container box style2">
+			<!--article class="container box style2">
 				<header>
 					<h2>And Much More...</h2>
-					<p>With dozens of available commands, the power of SiS is now available in your pocket.<br />
-					</p>
+					<p>With dozens of available commands, the power of SiS is now available in your pocket<br />
+					placerat cubilia purus lectus.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
@@ -76,38 +76,34 @@
 						<div class="3u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
 					</div>
-					<!--div class="row 0%">
+					<div class="row 0%">
 						<div class="3u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div-->
+					</div>
 				</div>
 			</article>
 
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
-					<h2>Sign Up Today</h2>
-					<p>Stop settling for clumsy interfaces.<br> Bring the power of SiS into your inbox today.</p>
+					<h2>Log into My Sis Pal</h2>
+					<p>Welcome Back.</p>
 				</header>
 				<form method="post" action="#">
 					<div class="row 50%">
 						<div class="6u 12u$(mobile)"><input type="text" class="text" name="email" placeholder="Email" /></div>
-						<div class="6u$ 12u$(mobile)"><input type="text" class="text" name="name" placeholder="First Name" /></div>
-						<div class="6u 12u$(mobile)"><input type="text" class="text" name="password" placeholder="Password" /></div>
-						<div class="6u$ 12u$(mobile)"><input type="text" class="text" name="phone" placeholder="Mobile Phone" /></div>
-
+						<div class="6u$ 12u$(mobile)"><input type="text" class="text" name="password" placeholder="Password" /></div>
 						<br>
 						<div class="12u$">
 							<ul class="actions">
-								<li><input type="submit" value="Sign me up" /></li> <br> <br>
-								<li><a href="login.html" > Already have an account? Login.</a>
+								<li><input type="submit" value="Login" /></li>
 							</ul>
 						</div>
 					</div>
 
-
+					<a href=""
 				</form>
 			</article>
 
