--- a/html5up-overflow/index.html
+++ b/html5up-overflow/index.html
@@ -55,7 +55,7 @@
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Information Sans Confusion<br />
+						<h2>Information Sans Irritation<br />
 						</h2>
 					</header>
 					<p>Dealing with a clumsy interface will is now a thing of the past. My SiS Pal will remind you of your advisor, </p>
