--- a/html5up-overflow/index.html
+++ b/html5up-overflow/index.html
@@ -19,7 +19,7 @@
 			<section id="header">
 				<header>
 					<h1>My SiS Pal</h1>
-					<p>Bringing SiS to the student</p>
+					<p>Information Sans Irritation</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Learn More</a>
@@ -29,10 +29,10 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is My Sis Pal</h2>
+					<h2>This is My SiS Pal</h2>
 				</header>
 				<p>A brand new way to access grades, class schedule, and more.</p>
-				<p>All at your fingertips.</p> <br />
+				<p>All just a text away.</p> <br />
 				<footer>
 					<a href="#first" class="button style2 scrolly">Register Now</a>
 				</footer>
